Tooltip alignment issue fixed

--- a/openmap coordinates/style.css
+++ b/openmap coordinates/style.css
@@ -36,6 +36,7 @@ input {
 
 .custom-popup .leaflet-popup-content-wrapper {
   color:#fff;
+  width: 250px;
   font-size:11px;
   height:100px;
   line-height:24px;
